[package]
name = "smithy-rust"
version = "0.1.0"
authors = ["Ramiro Ivan Cantu <ramiro.cantu.ramirez@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.16.1"
reqwest = "0.10.6"
tempfile = "3.1.0"
[dependencies.serenity]
default-features = false
features = [
    "builder",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
]
version = "0.8"
